# depinning_creep_2024

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci.yml
depinning_creep_2024/: AQS.py  Extremal.py  Preparation.py  Thermal.py  __init__.py  tag.py  tools.py
docs/: conf.py  index.rst
docs/workflow/: aqs.rst  extremal.rst  index.rst  thermal.rst
mycode_thermal_epm/: AQS.py  AthermalPreparation.py  AthermalQuasiStatic.py  Extremal.py  ExtremalAvalanche.py  ExtremeValue.py  Preparation.py  QuasiStatic.py  Thermal.py  ThermalAvalanche.py  __init__.py  tools.py
tests/: generate_realisations.py  test_AQS.py  test_AthermalQuasiStatic.py  test_Extremal.py  test_ExtremalAvalanche.py  test_ExtremeValue.py  test_Preparation.py  test_Thermal.py  test_ThermalAvalanche.py  test_upgrade.py
