[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [{name = "Tom de Geus", email = "tom@geus.me"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "enstat",
  "GooseEYE >=0.6.3",
  "GooseEPM >=0.5.0",
  "GooseHDF5 >=0.23.0",
  "h5py",
  "numpy",
  "scipy",
  "tqdm"
]
description = "Simple dataset management"
dynamic = ["version"]
name = "mycode_thermal_epm"
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
AQS_BranchPreparation = "mycode_thermal_epm.AQS:BranchPreparation"
AQS_EnsembleInfo = "mycode_thermal_epm.AQS:EnsembleInfo"
AQS_Plot = "mycode_thermal_epm.AQS:Plot"
AQS_Run = "mycode_thermal_epm.AQS:Run"
AQS_UpgradeData = "mycode_thermal_epm.AQS:UpgradeData"
ExtremalAvalanche_BranchExtremal = "mycode_thermal_epm.ExtremalAvalanche:BranchExtremal"
ExtremalAvalanche_EnsembleInfo = "mycode_thermal_epm.ExtremalAvalanche:EnsembleInfo"
ExtremalAvalanche_Run = "mycode_thermal_epm.ExtremalAvalanche:Run"
ExtremalAvalanche_UpgradeData = "mycode_thermal_epm.ExtremalAvalanche:UpgradeData"
Extremal_BranchPreparation = "mycode_thermal_epm.Extremal:BranchPreparation"
Extremal_EnsembleHeightHeight = "mycode_thermal_epm.Extremal:EnsembleHeightHeight"
Extremal_EnsembleInfo = "mycode_thermal_epm.Extremal:EnsembleInfo"
Extremal_Plot = "mycode_thermal_epm.Extremal:Plot"
Extremal_Run = "mycode_thermal_epm.Extremal:Run"
Extremal_UpgradeData = "mycode_thermal_epm.Extremal:UpgradeData"
Preparation_Generate = "mycode_thermal_epm.Preparation:Generate"
Preparation_Run = "mycode_thermal_epm.Preparation:Run"
Preparation_UpgradeData = "mycode_thermal_epm.Preparation:UpgradeData"
Preparation_VerifyData = "mycode_thermal_epm.Preparation:VerifyData"
ThermalAvalanche_BranchThermal = "mycode_thermal_epm.ThermalAvalanche:BranchThermal"
ThermalAvalanche_EnsembleInfo = "mycode_thermal_epm.ThermalAvalanche:EnsembleInfo"
ThermalAvalanche_Run = "mycode_thermal_epm.ThermalAvalanche:Run"
Thermal_BranchPreparation = "mycode_thermal_epm.Thermal:BranchPreparation"
Thermal_EnsembleHeightHeight = "mycode_thermal_epm.Thermal:EnsembleHeightHeight"
Thermal_EnsembleInfo = "mycode_thermal_epm.Thermal:EnsembleInfo"
Thermal_Plot = "mycode_thermal_epm.Thermal:Plot"
Thermal_Run = "mycode_thermal_epm.Thermal:Run"
Thermal_UpgradeData = "mycode_thermal_epm.Thermal:UpgradeData"

[project.urls]
Source = "https://github.com/tdegeus/mycode_thermal_epm"

[tool.setuptools_scm]
write_to = "mycode_thermal_epm/_version.py"
