[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [{name = "Tom de Geus", email = "tom@geus.me"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "enstat >=0.9.6",
  "GooseEYE >=0.8.0",
  "GooseEPM >=0.10.0",
  "GooseHDF5 >=0.26.1",
  "h5py",
  "numpy",
  "tqdm"
]
description = "Simple dataset management"
dynamic = ["version"]
name = "mycode_thermal_epm"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
AQS_BranchPreparation = "mycode_thermal_epm.AQS:BranchPreparation"
AQS_EnsembleInfo = "mycode_thermal_epm.AQS:EnsembleInfo"
AQS_Plot = "mycode_thermal_epm.AQS:Plot"
AQS_Run = "mycode_thermal_epm.AQS:Run"
AQS_UpgradeData = "mycode_thermal_epm.AQS:UpgradeData"
Extremal_Avalanches_x0 = "mycode_thermal_epm.Extremal:EnsembleAvalanches_x0"
Extremal_BranchPreparation = "mycode_thermal_epm.Extremal:BranchPreparation"
Extremal_EnsembleInfo = "mycode_thermal_epm.Extremal:EnsembleInfo"
Extremal_EnsembleStructure = "mycode_thermal_epm.Extremal:EnsembleStructure"
Extremal_Plot = "mycode_thermal_epm.Extremal:Plot"
Extremal_Run = "mycode_thermal_epm.Extremal:Run"
Extremal_UpgradeData = "mycode_thermal_epm.Extremal:UpgradeData"
Preparation_Generate = "mycode_thermal_epm.Preparation:Generate"
Preparation_UpgradeData = "mycode_thermal_epm.Preparation:UpgradeData"
Preparation_VerifyData = "mycode_thermal_epm.Preparation:VerifyData"
Thermal_BranchPreparation = "mycode_thermal_epm.Thermal:BranchPreparation"
Thermal_CheckData = "mycode_thermal_epm.Thermal:CheckData"
Thermal_EnsembleAvalanches_chrod = "mycode_thermal_epm.Thermal:EnsembleAvalanches_chrod"
Thermal_EnsembleAvalanches_clusters = "mycode_thermal_epm.Thermal:EnsembleAvalanches_clusters"
Thermal_EnsembleInfo = "mycode_thermal_epm.Thermal:EnsembleInfo"
Thermal_EnsembleStructure = "mycode_thermal_epm.Thermal:EnsembleStructure"
Thermal_Plot = "mycode_thermal_epm.Thermal:Plot"
Thermal_Run = "mycode_thermal_epm.Thermal:Run"
Thermal_UpgradeData = "mycode_thermal_epm.Thermal:UpgradeData"

[project.urls]
Source = "https://github.com/tdegeus/mycode_thermal_epm"

[tool.setuptools_scm]
write_to = "mycode_thermal_epm/_version.py"
