[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [{name = "Tom de Geus", email = "tom@geus.me"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "enstat >=0.9.6",
    "GooseEPM >=0.10.0",
    "GooseEYE >=0.8.0",
    "GooseHDF5 >=0.26.1",
    "h5py",
    "numpy",
    "tqdm",
]
description = "Simple dataset management"
dynamic = ["version"]
name = "depinning_creep_2024"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
AQS_BranchPreparation = "depinning_creep_2024.AQS:BranchPreparation"
AQS_EnsembleInfo = "depinning_creep_2024.AQS:EnsembleInfo"
AQS_Plot = "depinning_creep_2024.AQS:Plot"
AQS_Run = "depinning_creep_2024.AQS:Run"
AQS_UpgradeData = "depinning_creep_2024.AQS:UpgradeData"
Extremal_BranchPreparation = "depinning_creep_2024.Extremal:BranchPreparation"
Extremal_EnsembleAvalanches_x0 = "depinning_creep_2024.Extremal:EnsembleAvalanches_x0"
Extremal_EnsembleInfo = "depinning_creep_2024.Extremal:EnsembleInfo"
Extremal_EnsembleStructure = "depinning_creep_2024.Extremal:EnsembleStructure"
Extremal_Plot = "depinning_creep_2024.Extremal:Plot"
Extremal_Run = "depinning_creep_2024.Extremal:Run"
Extremal_UpgradeData = "depinning_creep_2024.Extremal:UpgradeData"
Preparation_Generate = "depinning_creep_2024.Preparation:Generate"
Preparation_UpgradeData = "depinning_creep_2024.Preparation:UpgradeData"
Preparation_VerifyData = "depinning_creep_2024.Preparation:VerifyData"
Thermal_BranchPreparation = "depinning_creep_2024.Thermal:BranchPreparation"
Thermal_EnsembleAvalanches_chord = "depinning_creep_2024.Thermal:EnsembleAvalanches_chord"
Thermal_EnsembleAvalanches_clusters = "depinning_creep_2024.Thermal:EnsembleAvalanches_clusters"
Thermal_EnsembleAvalanches_structure = "depinning_creep_2024.Thermal:EnsembleAvalanches_structure"
Thermal_EnsembleInfo = "depinning_creep_2024.Thermal:EnsembleInfo"
Thermal_EnsembleStructure = "depinning_creep_2024.Thermal:EnsembleStructure"
Thermal_Plot = "depinning_creep_2024.Thermal:Plot"
Thermal_Run = "depinning_creep_2024.Thermal:Run"
Thermal_UpgradeData = "depinning_creep_2024.Thermal:UpgradeData"

[project.urls]
Source = "https://github.com/tdegeus/depinning_creep_2024"

[tool.setuptools_scm]
write_to = "depinning_creep_2024/_version.py"
